@@ -1,0 +1,7 @@
+all: SimpleViewer2.gtkaml
+	../../src/gtkamlc $(VALAFLAGS) --pkg gtk+-2.0 --vapidir ../../markuphints $^
+
+clean:
+	rm SimpleViewer2
+
+
