@@ -1,0 +1,130 @@
+<!-- this is a port of http://www.michaelwerle.name/Programming/CSharp/SimpleViewer2.glade -->
+<Window xmlns='Gtk' xmlns:GLib='GLib' xmlns:class="http://gtkaml.org/0.4"
+	class:name="SimpleViewer2" title="SimpleViewer2" delete-event="{OnWindow1DeleteEvent()}">
+	<VBox>
+		<MenuBar expand="false">
+			<MenuItem label="_File" with-mnemonic="true">
+				<submenu>
+					<Menu>
+						<ImageMenuItem from-stock="true" stock-id="gtk-new" />
+						<ImageMenuItem stock-id="gtk-open" activate="OnFileOpenEvent"/>
+						<ImageMenuItem stock-id="gtk-save" />
+						<ImageMenuItem stock-id="gtk-save-as" />
+						<SeparatorMenuItem />
+						<ImageMenuItem stock-id="gtk-quit" activate="OnQuitEvent"/>
+					</Menu>
+				</submenu>
+			</MenuItem>
+			<MenuItem label="_Edit" with-mnemonic="true">
+				<submenu>
+					<Menu>
+						<ImageMenuItem stock-id="gtk-cut" />
+						<ImageMenuItem stock-id="gtk-copy" />
+						<ImageMenuItem stock-id="gtk-paste" />
+						<ImageMenuItem stock-id="gtk-delete" />
+					</Menu>
+				</submenu>
+			</MenuItem>
+			<MenuItem label="_View" with-mnemonic="true">
+				<submenu>
+					<Menu>
+						<CheckMenuItem label="_Word Wrap" with-mnemonic="true" class:private="menuWordWrap" activate="OnWordWrapActivatedEvent" />
+					</Menu>
+				</submenu>
+			</MenuItem>
+			<MenuItem label="_Help" with-mnemonic="true">
+				<submenu>
+					<Menu>
+						<ImageMenuItem stock-id="gtk-about" activate="OnMenuHelpAboutActivatedEvent"/>
+					</Menu>
+				</submenu>
+			</MenuItem>
+		</MenuBar>
+		<ScrolledWindow can-focus="true" hscrollbar-policy="{PolicyType.AUTOMATIC}" vscrollbar-policy="{PolicyType.AUTOMATIC}" >
+			<TextView can-focus="true" editable="false" class:private="textview1" />
+		</ScrolledWindow>
+	</VBox>	
+	<AboutDialog class:standalone="true" class:private="aboutdialog1" delete-event="aboutdialog1.hide_on_delete"
+		border-width="5" title="About SimpleViewer2" resizable="false" modal="true"
+		window-position="{WindowPosition.CENTER_ON_PARENT}" has-separator="false"
+		program-name="SimpleViewer2" version="1.0" copyright="Copyright (c) 2007 MIchael Werle"
+		comments="Simple .Net demonstration program, displays a text file in a scrolling text box and allows the user to toggle word-wrap on and off"
+		website="http://www.michaelwerle.com/SimpleViewer2/" 
+		authors='{new string[] {"Michael Werle (micha@michaelwerle.com)", "ported to gtkaml by Vlad Grecescu (b100dian@gmail.com)", null}}'>
+	</AboutDialog>			
+
+<![CDATA[
+	private void OnWindow1DeleteEvent () {
+		doCloseApplication ();
+	}
+
+	private void doCloseApplication () {
+		// TODO: Any checks to determine whether or not the application
+		// should stay active..
+		//if( test-for-shutdown fails )
+		//  return false;
+
+		// By default, quit application and signal that we should
+		// close the main window.
+		Gtk.main_quit ();
+	}
+
+	private void OnFileOpenEvent () {
+		FileChooserDialog fc = new FileChooserDialog ("Select file to open",
+				this, FileChooserAction.OPEN,
+				"Cancel", ResponseType.CANCEL,
+				"Open", ResponseType.ACCEPT);
+		int resp = fc.run ();
+		fc.hide ();
+		if (resp == ResponseType.ACCEPT)
+			loadFile(fc.get_filename ());
+		fc.destroy ();
+	}
+
+	public bool loadFile (string filename) {
+		int err = 0;
+		try {
+			string contents; ulong length;
+			FileUtils.get_contents (filename, out contents, out length);
+			textview1.buffer.set_text (contents, (int)length);
+		} catch(Error e) {
+			showError ("Unexpected error while loading the file, please contact the author with the following information:\n\n" + e.message);
+			err++;
+		}
+		return err == 0;
+	}
+
+	private void showError (string s) {
+		MessageDialog md = new MessageDialog (this,
+				DialogFlags.DESTROY_WITH_PARENT,
+				MessageType.ERROR,
+				ButtonsType.CLOSE,
+				s);
+		md.run ();
+		md.destroy ();
+	}
+
+	private void OnQuitEvent () {
+		doCloseApplication();
+	}
+
+	private void OnWordWrapActivatedEvent () {
+		textview1.wrap_mode = menuWordWrap.active ? WrapMode.WORD_CHAR: WrapMode.NONE;
+	}
+	
+	private void OnMenuHelpAboutActivatedEvent () {
+		aboutdialog1.transient_for = this;
+		aboutdialog1.run ();
+	}
+
+	static int main (string[] args) {
+		Gtk.init (ref args);
+		var viewer = new SimpleViewer2 ();
+		if (args.length > 1)
+			viewer.loadFile (args[1]);
+		viewer.show_all ();
+		Gtk.main ();
+		return 0;
+	}
+]]>
+</Window>
