@@ -1,0 +1,18 @@
+<Window xmlns:g="http://gtkaml.org/0.4" xmlns="Gtk" g:name="GtkHello"
+  type="{WindowType.TOPLEVEL}" title="First GTK+ Program" 
+  position="{WindowPosition.CENTER}" default-width="300" default-height="50"
+  destroy="Gtk.main_quit">
+
+  <Button label="Click me!" clicked='{target.label="Thank you"}' />
+
+<![CDATA[
+  static int main (string[] args) {
+    Gtk.init (ref args);
+    var window = new GtkHello ();
+    window.show_all ();
+    Gtk.main ();
+    return 0;
+  }
+]]>
+
+</Window>
